--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
   },
   "dependencies": {
     "babel-eslint": "^8.2.2",
+    "material-design-icons": "^3.0.1",
+    "prop-types": "^15.6.0",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-redux": "^5.0.7",
     "react-router-native": "^4.2.0",
-    "prop-types": "^15.6.0",
     "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-jest": "22.4.1",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.18.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
