--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "babel-eslint": "^8.2.2",
-    "material-design-icons": "^3.0.1",
     "prop-types": "^15.6.0",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-redux": "^5.0.7",
     "react-router-native": "^4.2.0",
+    "react-router-navigation": "^1.0.0-rc.4",
     "redux": "^3.7.2"
   },
   "devDependencies": {
